--- a/src/styles/mainSectionStyles.css
+++ b/src/styles/mainSectionStyles.css
@@ -1,12 +1,19 @@
 #mainSection {
+    display: flex;
+    justify-content: center;
+    height: 50vh;
+}
+
+.hexagon-container {
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 100%;
+    width: 100%;
+    height: 70px;
+    margin-top: 10vh;
 }
 
 .hexagon {
-    top: 35vh;
     position: absolute;
     margin: 0 auto;
     background-color: #ccc;
@@ -58,4 +65,38 @@ that they form a hexagon */
     top: 5px;
     left: 25px;
     z-index: 3;
+}
+
+.input-txn-container {
+    align-items: center;
+    background: transparent;
+    display: flex;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1.5px #b2beb5 solid;
+    border-radius: 5px;
+    outline: none;
+    width: 100%;
+    position: relative;
+}
+
+.input-txn-label {
+    color: #d3d3d3;
+    font-size: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-transform: uppercase;
+}
+
+.input-txn {
+    background: transparent;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: transparent;
+    color: #fff;
+    font-size: 14px;
+    outline: none;
+    width: 85%;
 }
